# COVID19_CT_Segmentation_3DSlicer

./: README.md
COVID19_CT_SEGMENTATION/: CMakeLists.txt
COVID19_CT_SEGMENTATION/ConvNetCovid/: CMakeLists.txt  ConvNetCovid.py
Slicer_4.11_tested/: README.md
Slicer_4.11_tested/CNNModels/: COVIDModel_RFCM_FCM_0.1_1.h5
Slicer_4.11_tested/COVID19_CT_SEGMENTATION/ConvNetCovid/: ConvNetCovid.py
